Removal of kubernetes deply property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ quarkus.datasource.password=aDmin1!
 #quarkus.datasource.password=tRa!1e3U$er
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/testdb
 quarkus.openshift.route.expose=true
-quarkus.kubernetes.deploy=true
+#quarkus.kubernetes.deploy=true
